Enabled new html-validate rule

--- a/power/src/app/gmb/gmboffline/gmboffline.component.html
+++ b/power/src/app/gmb/gmboffline/gmboffline.component.html
@@ -1,10 +1,11 @@
 <div class="container-xl">
 
     <div class="row title justify-content-center m-0 p-2 p-lg-3 text-center">
+        <!-- [html-validate-disable-next heading-level] -->
         <h1 *ngIf="mode === 'gmb'"
-         i18n>Grund&shy;stücks&shy;markt&shy;berichte (Archiv)</h1>
+            i18n>Grund&shy;stücks&shy;markt&shy;berichte (Archiv)</h1>
         <h1 *ngIf="mode === 'lmb'"
-         i18n>Landes&shy;grund&shy;stücks&shy;markt&shy;berichte (Archiv)</h1>
+            i18n>Landes&shy;grund&shy;stücks&shy;markt&shy;berichte (Archiv)</h1>
     </div>
 
     <div *ngIf="mode === 'lmb'"
