--- a/power/src/app/gmb/gmb/gmb.component.html
+++ b/power/src/app/gmb/gmb/gmb.component.html
@@ -1,6 +1,7 @@
 <div class="container-xl">
 
     <div class="row title justify-content-center m-0 p-2 p-lg-3 text-center">
+        <!-- [html-validate-disable-next heading-level] -->
         <h1 *ngIf="mode === 'gmb'"
             i18n>Grund&shy;stücks&shy;markt&shy;berichte</h1>
         <h1 *ngIf="mode === 'lmb'"
