Removed inline styles

--- a/power/src/app/app.component.scss
+++ b/power/src/app/app.component.scss
@@ -37,6 +37,7 @@ nav {
     -webkit-box-shadow: 0 0 0.25rem #343a40;
     -moz-box-shadow: 0 0 0.25rem #343a40;
     box-shadow: 0 0 0.25rem #343a40;
+    z-index: 1000;
 }
 
 @media (max-width: 576px) {
