--- a/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-navigation/bodenrichtwert-navigation.component.html
@@ -10,8 +10,7 @@
         </div>
 
         <!-- For desktop view -->
-        <div class="nav px-auto w-100 max-search-width d-none d-sm-inline-block"
-             style="position: relative;">
+        <div class="nav px-auto w-100 max-search-width d-none d-sm-inline-block position-relative">
             <power-geosearch (selectResult)="onAddressChange($event)"
                              [address]="address">
             </power-geosearch>
