--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -14,8 +14,8 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #343a40;">BORIS</span>
-                        <span style="color: #c4153a;">.NI</span>
+                        <span class="lgln-black">BORIS</span>
+                        <span class="lgln-red">.NI</span>
                     </h2>
                     <div class="lead text-dark">
                         <h3 class="h5"
@@ -39,7 +39,7 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #343a40;"
+                        <span class="lgln-black"
                               i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücks&shy;markt&shy;berichte</span>
                     </h2>
                     <div class="lead text-dark">
@@ -61,7 +61,7 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #343a40;"
+                        <span class="lgln-black"
                               i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrund&shy;stücks&shy;markt&shy;daten</span>
                     </h2>
                     <div class="lead text-dark">
@@ -83,8 +83,8 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #c4153a;">NI</span>
-                        <span style="color: #343a40;">PIX</span>
+                        <span class="lgln-red">NI</span>
+                        <span class="lgln-black">PIX</span>
                     </h2>
                     <div class="lead text-dark">
                         <h3 class="h5"
@@ -107,7 +107,7 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #343a40;"
+                        <span class="lgln-black"
                               i18n>IPK</span>
                     </h2>
                     <div class="lead text-dark">
@@ -131,7 +131,7 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #343a40;"
+                        <span class="lgln-black"
                               i18n>Formulare</span>
                     </h2>
                     <div class="lead text-dark">
@@ -155,7 +155,7 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #343a40;"
+                        <span class="lgln-black"
                               i18n>OGC Dienste</span>
                     </h2>
                     <div class="lead text-dark">
@@ -179,7 +179,7 @@
                      class="carousel-image">
                 <div class="carousel-caption text-center p-2 p-md-3 my-4 my-md-5">
                     <h2 class="display-4">
-                        <span style="color: #343a40;"
+                        <span class="lgln-black"
                               i18n>Feedback</span>
                     </h2>
                     <div class="lead text-dark">
@@ -205,8 +205,8 @@
                  [class.order-md-2]="getCardOrder('bodenrichtwerte')">
                 <a class="h2 display-4"
                    [routerLink]="['/bodenrichtwerte']">
-                    <span style="color: #343a40;">BORIS</span>
-                    <span style="color: #c4153a;">.NI</span>
+                    <span class="lgln-black">BORIS</span>
+                    <span class="lgln-red">.NI</span>
                 </a>
                 <div class="lead">
                     <h3 class="h5 text-break"
@@ -243,7 +243,7 @@
                  [class.order-md-2]="getCardOrder('grundstuecksmarktberichte')">
                 <a class="h2 display-4"
                    [routerLink]="['/grundstuecksmarktberichte']">
-                    <span style="color: #343a40;"
+                    <span class="lgln-black"
                           i18n="@@grundstuecksmarktberichte_fulltitle">Grundstücks&shy;markt&shy;berichte</span>
                 </a>
                 <div class="lead">
@@ -283,7 +283,7 @@
                    href="https://www.gag.niedersachsen.de/grundstuecksmarktinformationen/"
                    target="_blank"
                    rel="noopener noreferrer nofollow">
-                    <span style="color: #343a40;"
+                    <span class="lgln-black"
                           i18n="@@landesgrundstuecksmarktdaten_fulltitle">Landesgrund&shy;stücks&shy;markt&shy;daten</span>
                 </a>
                 <div class="lead">
@@ -322,8 +322,8 @@
                  [class.order-md-2]="getCardOrder('immobilienpreisindex')">
                 <a class="h2 display-4"
                    [routerLink]="['/immobilienpreisindex']">
-                    <span style="color: #c4153a;">NI</span>
-                    <span style="color: #343a40;">PIX</span>
+                    <span class="lgln-red">NI</span>
+                    <span class="lgln-black">PIX</span>
                 </a>
                 <div class="lead">
                     <h3 class="h5 text-break"
@@ -362,7 +362,7 @@
                    href="https://www.boris.niedersachsen.de/boris/ipk"
                    target="_blank"
                    rel="noopener noreferrer nofollow">
-                    <span style="color: #343a40;"
+                    <span class="lgln-black"
                           i18n>IPK</span>
                 </a>
                 <div class="lead">
@@ -407,7 +407,7 @@
                  [class.order-md-2]="getCardOrder('forms')">
                 <a class="h2 display-4"
                    [routerLink]="['/forms']">
-                    <span style="color: #343a40;"
+                    <span class="lgln-black"
                           i18n>Formulare</span>
                 </a>
                 <div class="lead">
@@ -484,7 +484,7 @@
                  [class.order-md-2]="getCardOrder('ogc-dienste')">
                 <a class="h2 display-4"
                    [routerLink]="['/ogc-dienste']">
-                    <span style="color: #343a40;">OGC Dienste</span>
+                    <span class="lgln-black">OGC Dienste</span>
                 </a>
                 <div class="lead">
                     <h3 class="h5 text-break"
