--- a/power/src/styles.scss
+++ b/power/src/styles.scss
@@ -35,6 +35,14 @@ code {
     color: #c43434 !important;
 }
 
+.lgln-black {
+    color: #343a40;
+}
+
+.lgln-red {
+    color: #c4153a;
+}
+
 $font-family-sans-serif: // Safari for macOS and iOS (San Francisco)
     -apple-system,
     // Chrome < 56 for macOS (San Francisco)
