--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -1,11 +1,9 @@
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white"
-         style="z-index: 1000;">
-        <a class="navbar-brand"
+    <nav class="navbar navbar-light navbar-expand-lg border-bottom bg-white">
+        <a class="navbar-brand lgln-black"
            i18n-title
            title="Zur Startseite"
-           [routerLink]="['/']"
-           style="color: #343a40;">
+           [routerLink]="['/']">
             <img src="./assets/logos/gag-mini.png"
                  class="mr-2 align-top"
                  aria-hidden="true"
@@ -15,13 +13,12 @@
                  alt="LGLN Logo">
             <strong class="d-inline">
                 <span i18n>Immobilienmarkt</span>
-                <span style="color: #c4153a;"
+                <span class="lgln-red"
                       i18n>.NI</span>
             </strong>
         </a>
 
-        <button class="navbar-toggler"
-                style="border: none; padding-right: 0;"
+        <button class="navbar-toggler border-0 pr-0"
                 type="button"
                 (click)="isCollapsed = !isCollapsed"
                 i18n-aria-label
