--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -124,7 +124,11 @@
 
             <div class="row m-0">
                 <div class="col-12 p-0 mb-2">
+                    <label class="sr-only"
+                           for="search-input"
+                           i18n>Suche nach Feedback und Tickets</label>
                     <input type="text"
+                           id="search-input"
                            class="form-control d-inline w-75"
                            style="max-width: 500px;"
                            [(ngModel)]="search"
@@ -160,7 +164,11 @@
                 </div>
 
                 <div class="col-12 p-0">
+                    <label class="sr-only"
+                           for="search-filter"
+                           i18n>Suchfilter für Tickets</label>
                     <select class="custom-select w-75"
+                            id="search-filter"
                             style="max-width: 250px;"
                             [(ngModel)]="stateFilter"
                             (change)="doSearch()">
