--- a/power/src/app/fragebogen/details/settings/settings.component.html
+++ b/power/src/app/fragebogen/details/settings/settings.component.html
@@ -1,7 +1,8 @@
 <power-modalmini #settingsmodal>
     <div class="form-group"
          for="select-owner">
-        <label i18n>Besitzer</label>
+        <label for="select-owner"
+               i18n>Besitzer</label>
         <select class="form-control"
                 id="select-owner"
                 [(ngModel)]="owner">
