--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -23,9 +23,12 @@
             </div>
             <div class="d-inline-block w-50 float-right"
                  style="min-width: 150px; max-width: 200px;">
+                <label class="sr-only"
+                       for="filter-task-status"
+                       i18n>Antworten filtern nach Status</label>
                 <select class="browser-default custom-select"
-                        (change)="taskStatus = $event.target.value; updateTasks(false)"
-                        aria-roledescription="Antworten filtern nach Status.">
+                        id="filter-task-status"
+                        (change)="taskStatus = $event.target.value; updateTasks(false)">
                     <option value="all"
                             selected
                             i18n>Status: Alle</option>
@@ -386,7 +389,11 @@
                 <div class="form-inline">
                     <div class="form-group m-0 mr-2"
                          *ngIf="taskTotal > taskPerPage">
+                        <label class="sr-only"
+                               for="pagination-tasks"
+                               i18n>Anzahl von Antworten pro Seite</label>
                         <select class="custom-select"
+                                id="pagination-tasks"
                                 (change)="taskPerPage = $event.target.value; updateTasks(false)">
                             <option *ngFor=" let size of taskPageSizes">
                                 {{ size }}
@@ -468,7 +475,11 @@
                 </div>
                 <div class="d-inline-block w-50"
                      style="min-width: 100px; max-width: 200px;">
+                    <label class="sr-only"
+                           for="filter-form-status"
+                           i18n>Formulare filtern nach Status</label>
                     <select class="browser-default custom-select"
+                            id="filter-form-status"
                             (change)="formStatus = $event.target.value; updateForms(false)">
                         <option value="all"
                                 selected
@@ -847,9 +858,11 @@
                 <div class="form-inline">
                     <div class="form-group m-0 mr-2"
                          *ngIf="formTotal > formPerPage">
+                        <label class="sr-only"
+                               for="pagination-forms"
+                               i18n>Anzahl von Formularen pro Seite</label>
                         <select class="custom-select"
-                                i18n-aria-label
-                                aria-label="Formularanzahl pro Seite"
+                                id="pagination-forms"
                                 (change)="formPerPage = $event.target.value; updateForms(false)">
                             <option *ngFor=" let size of formPageSizes">
                                 {{ size }}
