--- a/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
+++ b/power/src/app/fragebogen/public-dashboard/public-dashboard.component.html
@@ -159,9 +159,11 @@
                 <div class="form-inline">
                     <div class="form-group m-0 mr-2"
                          *ngIf="total > perPage">
+                        <label class="sr-only"
+                               for="pagination-forms"
+                               i18n>Anzahl von Formularen pro Seite</label>
                         <select class="custom-select"
-                                i18n-aria-label
-                                aria-label="Formularanzahl pro Seite"
+                                id="pagination-forms"
                                 (change)="perPage = $event.target.value; update(false)">
                             <option *ngFor=" let size of pageSizes">
                                 {{ size }}
