--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -124,6 +124,7 @@
                            [(ngModel)]="model.navigateToUrl"
                            name="form-navigateToUrl"
                            id="form-navigateToUrl"
+                           i18n-placeholder
                            placeholder="https://..."
                            aria-describedby="form-navigateToUrlHelp"
                            autocomplete="off">
@@ -147,6 +148,7 @@
                            [(ngModel)]="model.logo"
                            name="form-logo"
                            id="form-logo"
+                           i18n-placeholder
                            placeholder="https://..."
                            aria-describedby="form-logoHelp"
                            autocomplete="off">
