--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -199,6 +199,7 @@
                            [(ngModel)]="model.pages[page].elements[question].width"
                            name="question-width"
                            id="question-width"
+                           i18n-placeholder
                            placeholder="200px">
                 </div>
 
