--- a/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
+++ b/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
@@ -103,7 +103,9 @@
             </tr>
             <tr>
                 <td><span i18n>Bild einbinden</span>
-                    <img src="/assets/logos/logo.png"
+                    <img i18n-title
+                         i18n-alt
+                         src="/assets/logos/logo.png"
                          alt="Logo"
                          title="Logo LGLN"
                          height="25px">
