--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -43,7 +43,9 @@
                 </li>
 
                 <li class="nav-item dropdown"
-                    (click)="isCollapsedBRW = true; isCollapsedAcc = true;">
+                    role="button"
+                    (click)="isCollapsedBRW = true; isCollapsedAcc = true;"
+                    (keydown.enter)="isCollapsedBRW = true; isCollapsedAcc = true;">
                     <a class="nav-link dropdown-toggle clickable"
                        href=""
                        id="navbarImmo"
@@ -133,7 +135,9 @@
                 </li>
 
                 <li class="nav-item dropdown"
+                    role="button"
                     (click)="isCollapsedImmo = true; isCollapsedBRW = true;"
+                    (keydown.enter)="isCollapsedImmo = true; isCollapsedBRW = true;"
                     *ngIf="config.modules.includes('login') && auth.IsAuthenticated() && auth.user.data && auth.user.data.preferred_username">
                     <a class="nav-link dropdown-toggle clickable"
                        href=""
