--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -13,7 +13,9 @@
                 <div class="form-group">
                     <label for="form-title"
                            (click)="formsettingsmodal.scrollToFooter()"
+                           (keydown.enter)="formsettingsmodal.scrollToFooter()"
                            role="button"
+                           tabindex="0"
                            i18n>Formular Titel *</label>
                     <power-forms-editor-localeinput [(locale)]="model.title"
                                                     eid="form-title"
@@ -355,7 +357,8 @@
                             <span class="pull-left float-left">
                                 <span i18n>Seite</span> {{ i + 1 }}</span>
                             <span class="float-right pull-right"
-                                  (click)="$event.stopPropagation()">
+                                  (click)="$event.stopPropagation()"
+                                  (keydown.enter)="$event.stopPropagation()">
                                 <button type="button"
                                         class="btn btn-sm btn-light mr-2"
                                         i18n-title
