--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -13,7 +13,9 @@
                 <div class="form-group">
                     <label for="question-name"
                            (click)="questionsettingsmodal.scrollToFooter()"
+                           (keydown.enter)="questionsettingsmodal.scrollToFooter()"
                            role="button"
+                           tabindex="0"
                            i18n>Fragen ID *</label>
                     <input type="text"
                            class="form-control"
@@ -37,7 +39,9 @@
                 <div class="form-group">
                     <label for="question-title"
                            (click)="questionsettingsmodal.scrollToFooter()"
+                           (keydown.enter)="questionsettingsmodal.scrollToFooter()"
                            role="button"
+                           tabindex="0"
                            i18n>Fragen Titel *</label>
                     <power-forms-editor-localeinput [(locale)]="model.pages[page].elements[question].title"
                                                     eid="question-title"
