--- a/power/src/app/shared/advanced-search/bodenrichwertnummer-search/bodenrichwertnummer-search.component.html
+++ b/power/src/app/shared/advanced-search/bodenrichwertnummer-search/bodenrichwertnummer-search.component.html
@@ -1,6 +1,6 @@
 <div class="form-row py-1 align-items-center">
     <div class="col-12">
-        <label i18n>Bodenrichtwertnummer</label>
+        <span i18n>Bodenrichtwertnummer</span>
     </div>
     <div class="col-auto"
          [ngClass]="loading ? 'd-block' : 'd-none'">
