Added gag logo to pdf

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -289,7 +289,7 @@
 </ng-container>
 
 <power-modalmini #print>
-    <span i18n>Dieses Modal dient Ihrer entschleunigung, vielen Dank.</span>
+    <span i18n>Ihr Ausdruck wurde erzeugt und steht jetzt zum herunterladen bereit.</span>
 
     <!-- modal buttons -->
     <div class="modal-footer"
