--- a/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
+++ b/power/src/app/shared/markdown-instructions/markdown-instructions.component.html
@@ -27,6 +27,8 @@
     <div class="h4"
          i18n>Hilfe zur Formatierung</div>
     <table class="table table-striped table-bordered .table-responsive">
+        <caption class="sr-only"
+                 i18n>Liste an Formatierungen und deren Befehlen</caption>
         <thead>
             <tr>
                 <th scope="col"
